# particle_filter_localization_demo

./: CMakeLists.txt  README.md
inc/math/: mvn_rng.h
inc/visualize/: matplotlib_eigen.h  matplotlib_vector.h  matplotlibcpp.h
include/: footprint.h  intersect_detection.h  particle_filter.h  sim_lidar_detection.h  std_vector_to_edge_matrix.h
include/math/: mvn_pdf.h
src/: draft_demo.cpp
